<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RollActivity">

    <TextView
            android:text="@string/rollResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rollResultText" android:layout_marginTop="72dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/rollButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rollButton" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/rollResultText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.501"/>
    <Button
            android:text="@string/reSettingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reSettingButton" android:layout_marginTop="92dp"
            app:layout_constraintTop_toBottomOf="@+id/rollButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498"/>
    <Button
            android:text="@string/confidentialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ConfidentialButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/reSettingButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.159"/>
</androidx.constraintlayout.widget.ConstraintLayout>