<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TitleActivity">

    <Button
            android:text="@string/Roll.exe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/moveToRoll" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="152dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.498"/>
    <Button
            android:text="@string/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/help" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/moveToRoll" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498"/>
    <Button
            android:text="@string/setting"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:id="@+id/setting" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/help" app:layout_constraintHorizontal_bias="0.501"/>
    <Button
            android:text="@string/accesshome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/accesshome" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/setting"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.19"/>
</androidx.constraintlayout.widget.ConstraintLayout>